# reqcli

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/req/: __init__.py  __main__.py  cli.py  client.py  collection.py  env.py  history.py  state.py  tui.py
tests/: test_client.py  test_collection.py  test_env.py  test_state.py
