[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reqcli"
version = "0.1.0"
description = "Terminal API client — like Postman but in your terminal. Requests, collections, env vars, tests."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "GoDon", email = "godon@reqcli.dev" }]
keywords = ["api", "http", "rest", "cli", "postman", "terminal", "testing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Internet :: WWW/HTTP",
]

dependencies = [
    "typer[all]>=0.12",
    "rich>=13.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "tomli>=2.0; python_version < '3.11'",
    "packaging>=22",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.30",
    "ruff>=0.3",
]

[project.scripts]
req = "req.cli:app"

[project.urls]
Homepage = "https://github.com/GODONG-DN/reqcli"
Repository = "https://github.com/GODONG-DN/reqcli"
Issues = "https://github.com/GODONG-DN/reqcli/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
